--- a/test/examples/openarc/openmp/Makefile
+++ b/test/examples/openarc/openmp/Makefile
@@ -1,5 +1,10 @@
 include ../../../../make.header
 
+################################################
+# Makefile options that the user can overwrite #
+################################################
+OMP = 1
+
 ########################
 # Set the program name #
 ########################
