--- a/test/benchmarks/openacc/kernels/laplace2d/Makefile
+++ b/test/benchmarks/openacc/kernels/laplace2d/Makefile
@@ -20,6 +20,19 @@ DEFSET_CPU = -DVERIFICATION=$(VERIFICATION) -DNN=$(_NN_) -DNM=$(_NM_)
 DEFSET_ACC = -DVERIFICATION=$(VERIFICATION) -DNN=$(_NN_) -DNM=$(_NM_)
 
 #########################################################
+# Makefile options that the user can overwrite          #
+# OMP: set to 1 to use OpenMP (default: 0)              # 
+# MODE: set to profile to use a built-in profiling tool #
+#       (default: normal)                               #
+#       If this is set to profile, the runtime system   #
+#       will print profiling results according to the   #
+#       verbosity level set by OPENARCRT_VERBOSITY      #
+#       environment variable.                           # 
+#########################################################
+OMP ?= 0
+MODE ?= normal
+
+#########################################################
 # Use the following macros to give program-specific     #
 # compiler flags and libraries                          #
 # - CFLAGS1 and CLIBS1 to compile the input C program   #
