--- a/test/benchmarks/openacc/rodinia/backprop/Makefile
+++ b/test/benchmarks/openacc/rodinia/backprop/Makefile
@@ -25,6 +25,19 @@ DEFSET_CPU = -DSAVE_OUTPUT=$(SAVE_OUTPUT) -DVERIFICATION=$(VERIFICATION) -DI_SIZ
 DEFSET_ACC = -DSAVE_OUTPUT=$(SAVE_OUTPUT) -DVERIFICATION=$(VERIFICATION) -DI_SIZE=$(I_SIZE)
 
 #########################################################
+# Makefile options that the user can overwrite          #
+# OMP: set to 1 to use OpenMP (default: 0)              # 
+# MODE: set to profile to use a built-in profiling tool #
+#       (default: normal)                               #
+#       If this is set to profile, the runtime system   #
+#       will print profiling results according to the   #
+#       verbosity level set by OPENARCRT_VERBOSITY      #
+#       environment variable.                           # 
+#########################################################
+OMP ?= 0
+MODE ?= normal
+
+#########################################################
 # Use the following macros to give program-specific     #
 # compiler flags and libraries                          #
 # - CFLAGS1 and CLIBS1 to compile the input C program   #
