--- a/test/examples/openarc/matmul_debug/Makefile
+++ b/test/examples/openarc/matmul_debug/Makefile
@@ -18,6 +18,19 @@ DEFSET_CPU = -D_N_=$(_N_)
 DEFSET_ACC = -D_N_=$(_N_)
 
 #########################################################
+# Makefile options that the user can overwrite          #
+# OMP: set to 1 to use OpenMP (default: 0)              # 
+# MODE: set to profile to use a built-in profiling tool #
+#       (default: normal)                               #
+#       If this is set to profile, the runtime system   #
+#       will print profiling results according to the   #
+#       verbosity level set by OPENARCRT_VERBOSITY      #
+#       environment variable.                           # 
+#########################################################
+OMP ?= 0
+MODE ?= normal
+
+#########################################################
 # Use the following macros to give program-specific     #
 # compiler flags and libraries                          #
 # - CFLAGS1 and CLIBS1 to compile the input C program   #
