--- a/make.header.sample
+++ b/make.header.sample
@@ -94,7 +94,8 @@ GOMP_FLAGS = -openmp
 GOMP_LIBS =
 CC = cc
 CXX = CC
-CPP = $(CC) -E
+#CPP = $(CC) -E
+CPP = cpp
 GMACROS = -DOPENARC_ARCH=$(OPENARC_ARCH)
 GPROFILEMACROS = -D_OPENARC_PROFILE_=1
 ifeq ($(OPENARC_ARCH), 0)
