--- a/make.template
+++ b/make.template
@@ -4,16 +4,44 @@
 # output C++ program.                                #
 ######################################################
 
-################################################
-# Makefile options that the user can overwrite #
-################################################
+##########################################################
+# Makefile options that the user can overwrite           #
+##########################################################
+# OMP: set to 1 to use OpenMP (default: 0)               # 
+# MODE: set to profile to use a built-in profiling tool  #
+#       (default: normal)                                #
+#       If this is set to profile, the runtime system    #
+#       will print profiling results according to the    #
+#       verbosity level set by OPENARCRT_VERBOSITY       #
+#       environment variable.                            # 
+# DIST: set to 1 to use Integrated Message Passing       #
+#       OpenACC (IMPACC) version                         #
+#       (default: 0)                                     #
+# AOCL_FLAGS: set Altera OpenCL Compiler (AOC) flags     #
+#    - commonly used options                             #
+#      -march=emulator //compile a kernel for emulation  #
+#      -v //show progress of the compilation on-screen   # 
+#      -c //compile the kernel and generate a Quartus II #
+#         //hardware design project without creating a   #
+#         //hardware configuration file.                 #
+#      --profile //instrument the OpenCL kernel pipeline #
+#                //with performance counters.            #
+#      --report  //display estimated resource usage on   #
+#                //the screen.                           #
+#    (default: -march=emulator)                          #
+# AOCL_BOARD: set a target Altera FPGA board             #
+#    - "--board $(AOCL_BOARD)" will be added to the AOC  #
+#     in addition to the above flags                     # 
+#    (default: p385_hpc_a7)                              #
+##########################################################
 OMP ?= 0
 MODE ?= normal
 DIST ?= 0
 AOCL_BOARD ?= p385_hpc_a7
+AOCL_FLAGS ?= -march=emulator
 
 ifeq ($(DIST),1)
-#OMP should be set to 1 to use dist-OpenACC version.
+#OMP should be set to 1 to use IMPACC version.
 OMP = 1
 endif
 
@@ -119,9 +147,11 @@ $(BENCHMARK)_CPU: $(CSRCS) makedirectories
 
 $(BENCHMARK)_ACC: $($(CETUS_OUTPUT)/$(CXXSRCS)) makedirectories
 	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_ACC) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_OPENACC) $(CXXSRCS) $(CLIBS2); cp $(KERNEL_FILE) ../$(TARGET); cp $(OPENARCLIB)/binBuilder_$(OPENARCLIB_SUFFIX) ../$(TARGET); cp $(OPENARCLIB)/Timer ../$(TARGET); cd ../
+	if [ "$(OPENARC_ARCH)" = "3" ]; then cd $(CETUS_OUTPUT); aoc $(AOCL_FLAGS) --board $(AOCL_BOARD) openarc_kernel.cl; if [ -f "openarc_kernel.aocx" ]; then cp openarc_kernel.aocx ../$(TARGET)/openarc_kernel_EmulatorDeviceEmulatedDevice.aocx; fi; cd ../; echo ""; echo "====> Initialize AOCL Environment!"; echo "$$ . $$alteraroot/init_opencl.sh"; echo ""; fi
+	if [ "$(OPENARC_ARCH)" != "3" ] && [ -f $(TARGET)/binBuilder_$(OPENARCLIB_SUFFIX) ]; then cd $(TARGET); binBuilder_$(OPENARCLIB_SUFFIX); cd ../; fi
 
 COMPILE_KERNEL: $($(CETUS_OUTPUT)/$(KERNLE_FILE)) makedirectories
-	if [ "$(OPENARC_ARCH)" = "3" ]; then cd $(CETUS_OUTPUT); aoc -march=emulator --board $(AOCL_BOARD) openarc_kernel.cl; cp openarc_kernel.aocx ../$(TARGET)/openarc_kernel_EmulatorDeviceEmulatedDevice.aocx; cd ../; echo ""; echo "====> Initialize AOCL Environment!"; echo "$$ . $$alteraroot/init_opencl.sh"; echo ""; fi
+	if [ "$(OPENARC_ARCH)" = "3" ]; then cd $(CETUS_OUTPUT); aoc $(AOCL_FLAGS) --board $(AOCL_BOARD) openarc_kernel.cl; if [ -f "openarc_kernel.aocx" ]; then cp openarc_kernel.aocx ../$(TARGET)/openarc_kernel_EmulatorDeviceEmulatedDevice.aocx; fi; cd ../; echo ""; echo "====> Initialize AOCL Environment!"; echo "$$ . $$alteraroot/init_opencl.sh"; echo ""; fi
 	if [ "$(OPENARC_ARCH)" != "3" ] && [ -f $(TARGET)/binBuilder_$(OPENARCLIB_SUFFIX) ]; then cd $(TARGET); binBuilder_$(OPENARCLIB_SUFFIX); cd ../; fi
 
 makedirectories:
