--- a/test/benchmarks/openacc/kernels/jacobi/Makefile
+++ b/test/benchmarks/openacc/kernels/jacobi/Makefile
@@ -18,18 +18,41 @@ SIZE ?= 2048
 DEFSET_CPU = -DVERIFICATION=$(VERIFICATION) -DSIZE=$(SIZE)
 DEFSET_ACC = -DVERIFICATION=$(VERIFICATION) -DSIZE=$(SIZE)
 
-#########################################################
-# Makefile options that the user can overwrite          #
-# OMP: set to 1 to use OpenMP (default: 0)              # 
-# MODE: set to profile to use a built-in profiling tool #
-#       (default: normal)                               #
-#       If this is set to profile, the runtime system   #
-#       will print profiling results according to the   #
-#       verbosity level set by OPENARCRT_VERBOSITY      #
-#       environment variable.                           # 
-#########################################################
+##########################################################
+# Makefile options that the user can overwrite           #
+# OMP: set to 1 to use OpenMP (default: 0)               # 
+# MODE: set to profile to use a built-in profiling tool  #
+#       (default: normal)                                #
+#       If this is set to profile, the runtime system    #
+#       will print profiling results according to the    #
+#       verbosity level set by OPENARCRT_VERBOSITY       #
+#       environment variable.                            # 
+# AOCL_FLAGS: set Altera OpenCL Compiler (AOC) flags     #
+#    - commonly used options                             #
+#      -march=emulator //compile a kernel for emulation  #
+#      -v //show progress of the compilation on-screen   # 
+#      -c //compile the kernel and generate a Quartus II #
+#         //hardware design project without creating a   #
+#         //hardware configuration file.                 #
+#      --profile //instrument the OpenCL kernel pipeline #
+#                //with performance counters.            #
+#      --report  //display estimated resource usage on   #
+#                //the screen.                           #
+#    (default: -march=emulator)                          #
+# AOCL_BOARD: set a target Altera FPGA board             #
+#    - "--board $(AOCL_BOARD)" will be added to the AOC  #
+#     in addition to the above flags                     # 
+#    (default: p385_hpc_a7)                              #
+##########################################################
 OMP ?= 0
 MODE ?= normal
+#AOCL_BOARD ?= p385_hpc_d5
+AOCL_BOARD ?= p385_hpc_a7
+#AOCL_FLAGS ?= -march=emulator
+#AOCL_FLAGS ?= -march=emulator -c
+AOCL_FLAGS ?= -c --report
+#AOCL_FLAGS ?= --report
+
 
 #########################################################
 # Use the following macros to give program-specific     #
